sip4 (4.12.4-1) unstable; urgency=low

  * Team upload
  * New upstream release
  * Remove obsolete debian/source/lintian-overrides
  * Fix typo in last changelog entry
  * Replace hack in debian/rules with --no-dbg-cleaning and bump minimun
    python version to 2.6.7-3~
  * Stop doing things in binary-indep since we no longer build any arch all
    packages

 -- Scott Kitterman <scott@kitterman.com>  Wed, 24 Aug 2011 10:22:09 -0400

sip4 (4.12.3-1) unstable; urgency=low

  * Team upload

  [ Scott Kitterman ]
  * New upstream release (No API version change)
    - Refresh and adapt patches
  * Switch to dh_python2
    - Update debian/rules
    - Drop python-support build-depends
  * Bump standards version to 3.9.2 without further change
  * Remove Bernd Zeimetz from Uploaders at his request
    - Thanks to bzed for all his work on the package

 -- Scott Kitterman <scott@kitterman.com>  Fri, 29 Jul 2011 19:24:24 -0400

sip4 (4.12.1-1) unstable; urgency=low

  * Team upload.

  [ Michael Casadevall ]
  * Merged in patch from Per W for Python 3 support, thank you.
  * Add lintian overrides for incorrect warnings

  [ Michał Zając ]
  * New upstream release
  * Added Python 3 support (Closes: #587072)
   - support default Python 3 interpreter only for now
   - debian/rules: added dh_python3
   - debian/rules: added install-arch-3.%
   - debian/rules: added substvars to keep provides up-to-date
   - debian/control: python-sip provides sip-api-8.0 and 8.1
   - debian/control: python3-sip provides sip-py3api-8.0 and 8.1
  * Added configure.py.patch, fixes FTBFS
  * debian/patches/siputils_debian_changes.diff
   - Refreshed

  [ Piotr Ożarowski ]
  * Change source package name to sip4 (Closes: #535599)
  * Do not compress objects.inv file (Closes: #608772)
  * Drop transitional packages: python-sip4, sip4, python-sip4-dev,
    python-sip4-dbg

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 24 Jan 2011 19:31:28 +0100

sip4-qt3 (4.10.2-1) unstable; urgency=low
